syntax = "proto3";

package model;

option java_package = "com.example.authormodule.model";
option java_outer_classname = "BookProto";

message Book {
  int64 id = 1;
  int64 authorId = 2;
  string name = 3;
}